# stirrup_agent

./: .env.example  .gitignore  404.html  AGENTIF_ONEDAY_USAGE.md  CLAUDE.md  index.html  monitor_and_analyze.py  objects.inv  pyproject.toml  visualize.py  visualize_index.html
api/clients/chat_completions/: index.html
api/clients/litellm/: index.html
api/clients/open_responses/: index.html
api/core/agent/: index.html
api/core/exceptions/: index.html
api/core/models/: index.html
api/tools/: index.html
api/tools/browser-use/: index.html
api/tools/code_backends/: index.html
api/tools/mcp/: index.html
api/tools/view-image/: index.html
api/tools/web/: index.html
api/utils/logging/: index.html
api/utils/text/: index.html
assets/: extra.css
autoresearch/: ledger.jsonl  profile.yaml  results.tsv  state.yaml
autoresearch/runs/: 2026-04-26-loop-0001.yaml
concepts/: index.html
docs/autoresearch/: 当前项目架构说明.md
docs/autoresearch/plans/: 2026-04-26-semantic-state-tracking-plan.md
docs/autoresearch/specs/: 2026-04-16-semantic-state-constrained-decoding-design-notes.md  2026-04-16-semantic-state-tracking-design.md
evals/agentif_oneday/: __init__.py  __main__.py  loader.py  run_eval.py  runner.py
evals/gdpval/: __main__.py  client.py  file_extract.py  grade_results.py  grader.py  loader.py  run_eval.py  runner.py
evals/gdpval/task_lists/: fast_subset.txt  my_tasks.txt
examples/: index.html
extending/clients/: index.html
extending/code_backends/: index.html
extending/full-customization/: index.html
extending/loggers/: index.html
extending/tools/: index.html
getting-started/: index.html
guides/caching/: index.html
guides/code-execution/: index.html
guides/mcp/: index.html
guides/skills/: index.html
guides/sub-agents/: index.html
guides/tool-providers/: index.html
guides/tools/: index.html
scripts/: autoresearch_run.py
search/: search_index.json
src/stirrup/: constants.py
src/stirrup/clients/: chat_completions_client.py
src/stirrup/core/: __init__.py  agent.py  planner.py  semantic_state.py
src/stirrup/prompts/: __init__.py  base_system_prompt.txt  planner_prompt.txt
src/stirrup/tools/code_backends/: base.py
src/stirrup/utils/: logging.py
tests/: test_agent.py  test_browser_use.py  test_semantic_state.py
